0.4.1, (unreleased)
    * Added two new type handlers, for byte[] and java.util.Locale.
    * DataSink interface method renames

0.4.0, released 2008-09-27:
    * Added support for stored procedures calls (@Call annotation added)

0.3.3, released 2008-09-04:
    * Performance improvement.

0.3.2, released 2008-08-24:
    * Improved generics support. Now you can declare method with generic parameters
      in super-interface, with sub-interface providing all type arguments and Nanorm
      configuration.

0.3.1, released 2008-08-24:
    * Method findResultMap of InternalConfiguration made public for custom project. 
      This method could be used to retrieve mapping between properties names and
      column names.
